@@ -1,3 +1,5 @@
+* Rename Origin field informations to information
+
 Version 5.0.0 - 2018-10-01
 * Bug fixes (see mercurial logs for details)
 * Use single account for statement journal
